--- a/position-exercise.html
+++ b/position-exercise.html
@@ -15,12 +15,12 @@
 		    <a href="">Float</a>
 	    </div>
 	</nav>
+
 	<div class="container">
-		<div class="dot"></div>
-		<div class="catdog">
+		<div class="dot">
 			<img src="img/spacecat.png" class='cat'>
-      		<img src="img/spacedog.png" class='dog'>		
-  		</div>
+      		<img src="img/spacedog.png" class='dog'>	
+      	</div>	
 	</div>
 </body>
 </html>
