--- a/design_challenge.html
+++ b/design_challenge.html
@@ -17,7 +17,7 @@
 	<form>
 		<h3>Search Job</h3>
 		<div class="container">
-			<img src="img/magnifying-glass.png">
+			<input type="image" name="" src="img/magnifying-glass.png" class="img">
 			<input type="text" name="search" placeholder="Search software jobs">
 		</div>
 	</form>
