--- a/design_challenge.html
+++ b/design_challenge.html
@@ -8,17 +8,17 @@
 <body>
 <header>
 	<nav>
-		<H2>Greg's List</H2>
-		<h2 class="left">post</h2>
-		<h2 class="left">account</h2>
+		<p>Greg's List</p>
+		<p class="right">post</p>
+		<p class="right">account</p>
 	</nav>
 </header>
 <main>
-	<form>
+	<form class="search">
 		<h3>Search Job</h3>
-		<div class="container">
-			<input type="image" name="" src="img/magnifying-glass.png" class="img">
-			<input type="text" name="search" placeholder="Search software jobs">
+		<div class="search">
+			<input type="text" name="search" placeholder="Search software jobs" class="ipt">
+			<input type="image" role="button" src="img/magnifying-glass.png" class="image">
 		</div>
 	</form>
 	<table class="table">
