sign up page challenge

--- a/design_challenge.html
+++ b/design_challenge.html
@@ -21,7 +21,7 @@
 		<form>
 			<label for="search" class="search-label">Search Job</label>
 			<input type="text" name="search" placeholder="Search software jobs" class="ipt">
-			<input type="image" role="button" class="search-button" src="img/magnifying-glass.png" alt="Search">
+			<input type="image" class="search-button" src="img/magnifying-glass.png">
 		</form>
 	</section>
 	<table class="table">
