fixing responsive grid exercice

--- a/Responsive_Grids.html
+++ b/Responsive_Grids.html
@@ -4,13 +4,14 @@
 	<title>Responsive Grids</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style/Responsive_Grids.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 		<div class="row">
 			<div class="column-3 orange column"><p>column 3</p></div>
 			<div class="column-3 blue column"><p>column 3</p></div>
 			<div class="column-3 green column"><p>column 3</p></div>
-			<div class="column-3 black column"><p>column 3</p></div>
+			<div class="column-3 black column"><p class="white">column 3</p></div>
 		</div>
 		<div class="row">
 			<div class="column-4 orange column"><p>column 4</p></div>
