--- a/Responsive_Layout.html
+++ b/Responsive_Layout.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" type="text/css" href="Responsive_Layout.css">
+  <link rel="stylesheet" type="text/css" href="style/Responsive_Layout.css">
 </head>
 <body>
 	<header>
